Update index links in multiple language versions of camping guides to ensure correct navigation paths. Adjusted links to point to the appropriate directories for improved user experience and consistency across all translations.

--- a/de/index.html
+++ b/de/index.html
@@ -469,91 +469,91 @@
             <h3>Die besten Camping-Apps für Neuseeland 2025</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Wir haben KiwiCamping gegen Rankers, CamperMate, WikiCamps und AllTrails getestet, um zu sehen, welche App auf neuseeländischen Straßen wirklich durchhält. Erfahre, für wen welche Option passt, wie Offlinedaten funktionieren und wo Preis- oder Datenschutzfallen lauern.</p>
-            <p class="guide-links"><a href="best-nz-camping-apps.html">Zum vollständigen Guide<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="holiday-parks-nz-booking-guide.html">Buchungstricks<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../best-nz-camping-apps.html">Zum vollständigen Guide<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../holiday-parks-nz-booking-guide.html">Buchungstricks<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Freedom Camping in Neuseeland, Regeln nach Region</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Erhalte eine verständliche Übersicht über nationales Recht und jede Gemeindeverordnung, bevor du parkst. Der Guide zeigt, wie du Schilder liest, Regeln offline prüfst und Spickzettel für beide Inseln herunterlädst.</p>
-            <p class="guide-links"><a href="freedom-camping-rules-nz.html">Regeln nach Region<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="self-contained-vehicles-nz.html">Self-Contained-Anforderungen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../freedom-camping-rules-nz.html">Regeln nach Region<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../self-contained-vehicles-nz.html">Self-Contained-Anforderungen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Gratis campen in NZ? Wo es legal und sicher ist</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Sieh genau, wo Campen wirklich kostenlos ist – von Gemeindereserven bis zu DOC-Basisplätzen – ohne Bussgeldrisiko. Wir gehen Etikette, Sicherheit und Legalitätschecks durch, damit du selbstbewusst ankommst.</p>
-            <p class="guide-links"><a href="free-camping-nz-legal.html">Legal-Workflow fürs Gratiscampen<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="dump-stations-nz.html">Dumpstation-Karte<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../free-camping-nz-legal.html">Legal-Workflow fürs Gratiscampen<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../dump-stations-nz.html">Dumpstation-Karte<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Wo du in Neuseeland campen kannst, Standortguide</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Wähle zwischen DOC-Gelände, Gemeindereserven, privaten Holiday Parks und iwi-geführten Aufenthalten mit regionalen Highlights für jede Insel. Saisonale Tipps und Zugangshinweise helfen dir, Ziel, Crew und Fahrzeug abzustimmen.</p>
-            <p class="guide-links"><a href="where-to-camp-in-new-zealand.html">Standorte entdecken<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="top-scenic-campsites-nz.html">Panorama-Liste ansehen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../where-to-camp-in-new-zealand.html">Standorte entdecken<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../top-scenic-campsites-nz.html">Panorama-Liste ansehen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Holiday Parks in Neuseeland, Auswahl und Buchung</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Vergleiche Ausstattung, Preisspannen und Buchungsabläufe, um in Minuten einen Stellplatz mit oder ohne Strom zu sichern. Wir erklären Treuevorteile, Stornobedingungen und Late-Check-in-Tricks samt druckbaren Checklisten.</p>
-            <p class="guide-links"><a href="holiday-parks-nz-booking-guide.html">Holiday Park buchen<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-costs-nz.html">Budget kalkulieren<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../holiday-parks-nz-booking-guide.html">Holiday Park buchen<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../camping-costs-nz.html">Budget kalkulieren<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>DOC-Campingplätze und Hütten, Reservierungen, Gebühren, Etikette</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Verstehe jede DOC-Kategorie, die Gebühren dahinter und wann Buchungsfenster öffnen. Etikette-Reminder, Alarmhinweise und Vergleiche bereiten dich auf voll ausgestattete Campsites wie auf Biwaks vor.</p>
-            <p class="guide-links"><a href="doc-campsites-huts-guide.html">Kompletter DOC-Guide<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="two-week-camper-itinerary-nz.html">DOC-lastige Route planen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../doc-campsites-huts-guide.html">Kompletter DOC-Guide<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../two-week-camper-itinerary-nz.html">DOC-lastige Route planen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Self-Contained-Fahrzeuge in NZ, was verlangt wird</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Entschlüssele die aktualisierte Norm NZS 5465 für feste Toiletten, Tanks, Entlüftungen und Prüfprotokolle, bevor du zur Kontrolle gehst. Wir erklären die Praxis und liefern Checklisten, damit dein Fahrzeug konform bleibt.</p>
-            <p class="guide-links"><a href="self-contained-vehicles-nz.html">Zertifizierungs-Checklist<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="freedom-camping-rules-nz.html">Freedom-Camping-Regeln<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../self-contained-vehicles-nz.html">Zertifizierungs-Checklist<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../freedom-camping-rules-nz.html">Freedom-Camping-Regeln<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Dumpstations und Abfallknigge für Camper</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Markiere alle Dumpstations des Landes mit Ausrüstungs-Tipps und Spülroutinen, die Plätze sauber halten. So vermeidest du Bußen, gehst mit Reinigern verantwortungsvoll um und unterstützt Gemeinden beim Offenhalten der Anlagen.</p>
-            <p class="guide-links"><a href="dump-stations-nz.html">Abfall-Guide<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="self-contained-vehicles-nz.html">Self-Contained-Tipps<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../dump-stations-nz.html">Abfall-Guide<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../self-contained-vehicles-nz.html">Self-Contained-Tipps<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Feuerregeln, Verbote und sicheres Kochen im Freien</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Bleib den Phasen mit Feuerbeschränkungen oder -verboten voraus – mit regionalen Hinweisen und Genehmigungslinks. Entscheidungstabellen und Kochalternativen sorgen dafür, dass das Abendessen klappt, auch ohne offenes Feuer.</p>
-            <p class="guide-links"><a href="campfire-rules-nz.html">Feuerregeln prüfen<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-packing-list-nz.html#stoves">Kochoptionen ergänzen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../campfire-rules-nz.html">Feuerregeln prüfen<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-packing-list-nz.html#stoves">Kochoptionen ergänzen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Sandflies, Wetter und Jahreszeiten: komfortabel planen</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Plane mit den wechselnden Wetterzonen, Winden und Sandfly-Gebieten Neuseelands anhand monatlicher Infos. Ausrüstungstipps und Strategien halten dein Team bequem, ohne Übergepäck.</p>
-            <p class="guide-links"><a href="nz-camping-seasons-weather-sandflies.html">Saisonplanung-Guide<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-packing-list-nz.html">Packliste ansehen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../nz-camping-seasons-weather-sandflies.html">Saisonplanung-Guide<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../camping-packing-list-nz.html">Packliste ansehen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Packliste für Camping in NZ mit regionalen Varianten</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Erstelle einen praxisnahen Packplan mit Basics plus alpinen, küstennahen und Regen-Extras für NZ-Trips. Druckbare Listen und Kommunikations- sowie Notfalltipps beschleunigen die Gruppenplanung.</p>
-            <p class="guide-links"><a href="camping-packing-list-nz.html">Checkliste herunterladen<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="nz-camping-seasons-weather-sandflies.html">Auf das Wetter abstimmen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../camping-packing-list-nz.html">Checkliste herunterladen<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../nz-camping-seasons-weather-sandflies.html">Auf das Wetter abstimmen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Verantwortungsvolles Camping in NZ, Leave No Trace lokal</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Erfahre, wie Leave-No-Trace-Prinzipien auf Landschaften, Tierwelt und Gemeinden Aotearoas übertragen werden. Der Guide behandelt Biosecurity-Basics und liefert einen teilbaren Verhaltenskodex für gute Beziehungen vor Ort.</p>
-            <p class="guide-links"><a href="responsible-camping-nz.html">Verhaltenskodex lesen<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="dump-stations-nz.html">Abfall-Etikette<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../responsible-camping-nz.html">Verhaltenskodex lesen<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../dump-stations-nz.html">Abfall-Etikette<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Top 25 landschaftliche Campingplätze in Neuseeland</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Entdecke 25 Postkartenplätze mit KiwiCamping-Deep-Links zum sofortigen Speichern und Navigieren. Zugangshinweise, Buchungstipps und Fotoideen helfen dir beim perfekten Sonnenaufgang.</p>
-            <p class="guide-links"><a href="top-scenic-campsites-nz.html">Top 25 ansehen<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="where-to-camp-in-new-zealand.html">Regionenüberblick<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../top-scenic-campsites-nz.html">Top 25 ansehen<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../where-to-camp-in-new-zealand.html">Regionenüberblick<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Zweiwöchige Camper-Route durch Neuseeland</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Folge einer 14-Tage-Route mit ausgewogenem Mix aus DOC-Hütten, Freedom-Camping-Spots und Holiday Parks auf beiden Inseln. Benzin, Fähre, Einkauf, GPX und druckbare Tagespläne machen das Anpassen einfach.</p>
-            <p class="guide-links"><a href="two-week-camper-itinerary-nz.html">14-Tage-Plan laden<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-costs-nz.html">Reise budgetieren<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../two-week-camper-itinerary-nz.html">14-Tage-Plan laden<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../camping-costs-nz.html">Reise budgetieren<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Campingkosten in NZ, Budgetaufstellung mit Beispielen</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Erstelle realistische Budgets für Solo-, Paar- oder Familienabenteuer je nach Saison. Wir berücksichtigen Unterkunftsmix, Treibstoff, Fähren, Verpflegung und Ausrüstungsabschreibung, damit du Zahlen schnell anpassen kannst.</p>
-            <p class="guide-links"><a href="camping-costs-nz.html">Budget planen<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="holiday-parks-nz-booking-guide.html">Bei Buchungen sparen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../camping-costs-nz.html">Budget planen<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../holiday-parks-nz-booking-guide.html">Bei Buchungen sparen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
         </div>
       </section>
