--- a/fr/index.html
+++ b/fr/index.html
@@ -469,91 +469,91 @@
             <h3>Les meilleures applis de camping en Nouvelle-Zélande en 2025</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Nous avons opposé KiwiCamping à Rankers, CamperMate, WikiCamps et AllTrails pour voir quelle appli fonctionne vraiment sur les routes néo-zélandaises. Découvrez pour qui chaque option convient, comment les données hors ligne se comportent et où se cachent les pièges de prix ou de confidentialité.</p>
-            <p class="guide-links"><a href="best-nz-camping-apps.html">Lire le guide complet<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="holiday-parks-nz-booking-guide.html">Astuces de réservation<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../best-nz-camping-apps.html">Lire le guide complet<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../holiday-parks-nz-booking-guide.html">Astuces de réservation<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Freedom camping en Nouvelle-Zélande, règles par région</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Obtenez un résumé clair de la loi nationale et de chaque règlement de conseil avant de vous installer. Le guide explique comment lire la signalisation, vérifier les règles hors ligne et télécharger des fiches mémo pour les deux îles.</p>
-            <p class="guide-links"><a href="freedom-camping-rules-nz.html">Règles par région<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="self-contained-vehicles-nz.html">Exigences self-contained<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../freedom-camping-rules-nz.html">Règles par région<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../self-contained-vehicles-nz.html">Exigences self-contained<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Peut-on camper gratuitement en NZ ? Où c’est légal et sûr</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Voyez où le camping est vraiment gratuit, des réserves de conseil aux basiques du DOC, sans risquer d’amende. Nous détaillons l’étiquette, la sécurité et les contrôles de légalité pour arriver confiant et bien accueilli.</p>
-            <p class="guide-links"><a href="free-camping-nz-legal.html">Parcours légal du camping gratuit<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="dump-stations-nz.html">Carte des stations de vidange<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../free-camping-nz-legal.html">Parcours légal du camping gratuit<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../dump-stations-nz.html">Carte des stations de vidange<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Où camper en Nouvelle-Zélande, guide complet des lieux</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Choisissez entre terrains du DOC, réserves de conseils, holiday parks privés et séjours gérés par les iwi avec points forts régionaux pour chaque île. Les conseils saisonniers et notes d’accès vous aident à faire correspondre destination, équipage et véhicule.</p>
-            <p class="guide-links"><a href="where-to-camp-in-new-zealand.html">Explorer le guide des lieux<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="top-scenic-campsites-nz.html">Voir la liste panoramique<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../where-to-camp-in-new-zealand.html">Explorer le guide des lieux<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../top-scenic-campsites-nz.html">Voir la liste panoramique<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Holiday parks en Nouvelle-Zélande, comment choisir et réserver</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Comparez équipements, fourchettes de prix et parcours de réservation pour obtenir un emplacement alimenté ou non en quelques minutes. Nous détaillons avantages fidélité, politiques d’annulation et astuces d’arrivée tardive avec check-lists imprimables.</p>
-            <p class="guide-links"><a href="holiday-parks-nz-booking-guide.html">Réserver un holiday park<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-costs-nz.html">Calculer le budget<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../holiday-parks-nz-booking-guide.html">Réserver un holiday park<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../camping-costs-nz.html">Calculer le budget<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Campings et refuges du DOC, réservations, tarifs et étiquette</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Comprenez chaque catégorie de camping et refuge du DOC, les frais associés et l’ouverture des fenêtres de réservation. Rappels d’étiquette, alertes et comparatifs côte à côte vous préparent aux campings équipés comme aux bivouacs.</p>
-            <p class="guide-links"><a href="doc-campsites-huts-guide.html">Guide DOC complet<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="two-week-camper-itinerary-nz.html">Planifier un itinéraire DOC<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../doc-campsites-huts-guide.html">Guide DOC complet<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../two-week-camper-itinerary-nz.html">Planifier un itinéraire DOC<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Véhicules self-contained en NZ, exigences réelles</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Décryptez les exigences mises à jour de la norme NZS 5465 pour toilettes fixes, réservoirs, aérations et papiers d’inspection avant de voir un auditeur. Nous expliquons l’application sur le terrain et ajoutons des listes imprimables pour rester conforme.</p>
-            <p class="guide-links"><a href="self-contained-vehicles-nz.html">Checklist de certification<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="freedom-camping-rules-nz.html">Règles de freedom camping<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../self-contained-vehicles-nz.html">Checklist de certification<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../freedom-camping-rules-nz.html">Règles de freedom camping<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Stations de vidange et étiquette des déchets pour campeurs</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Cartographiez toutes les stations de vidange du pays avec conseils d’équipement et routines de rinçage pour garder les aires impeccables. Vous saurez éviter les amendes, gérer les détergents responsablement et aider les conseils à maintenir les services ouverts.</p>
-            <p class="guide-links"><a href="dump-stations-nz.html">Guide des déchets<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="self-contained-vehicles-nz.html">Astuces self-contained<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../dump-stations-nz.html">Guide des déchets<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../self-contained-vehicles-nz.html">Astuces self-contained<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Règles de feu, interdictions et cuisine extérieure sécurisée</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Anticipez les saisons de feu restreint ou interdit grâce aux notes régionales et liens de permis. Tableaux de décision et alternatives de cuisson garantissent le repas même sans flamme directe.</p>
-            <p class="guide-links"><a href="campfire-rules-nz.html">Vérifier les règles de feu<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-packing-list-nz.html#stoves">Ajouter des options de cuisson<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../campfire-rules-nz.html">Vérifier les règles de feu<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-packing-list-nz.html#stoves">Ajouter des options de cuisson<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Sandflies, météo et saisons : planifier un voyage confortable</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Planifiez selon les bandes météo, les vents et les zones de sandflies changeants avec des infos mois par mois. Conseils d’équipement et tactiques de gestion gardent l’équipage à l’aise sans surcharger les bagages.</p>
-            <p class="guide-links"><a href="nz-camping-seasons-weather-sandflies.html">Guide de planification saisonnière<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-packing-list-nz.html">Liste d’équipement<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../nz-camping-seasons-weather-sandflies.html">Guide de planification saisonnière<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../camping-packing-list-nz.html">Liste d’équipement<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Liste d’équipement essentielle pour camper en NZ</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Élaborez un plan de bagages pratique couvrant les essentiels plus les extras alpins, côtiers et pluie pour les voyages en NZ. Listes imprimables et conseils de communication ou d’urgence facilitent la préparation en groupe.</p>
-            <p class="guide-links"><a href="camping-packing-list-nz.html">Télécharger la checklist<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="nz-camping-seasons-weather-sandflies.html">Adapter à la météo<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../camping-packing-list-nz.html">Télécharger la checklist<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../nz-camping-seasons-weather-sandflies.html">Adapter à la météo<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Camping responsable en NZ, Leave No Trace local</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Découvrez comment les principes Leave No Trace s’adaptent aux paysages, à la faune et aux communautés d’Aotearoa. Le guide couvre les bases de biosécurité et propose un code de conduite partageable pour garder les locaux favorables.</p>
-            <p class="guide-links"><a href="responsible-camping-nz.html">Lire le code de conduite<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="dump-stations-nz.html">Étiquette des déchets<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../responsible-camping-nz.html">Lire le code de conduite<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../dump-stations-nz.html">Étiquette des déchets<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Top 25 des campings panoramiques en Nouvelle-Zélande</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Découvrez 25 campings dignes d’une carte postale avec des liens profonds KiwiCamping pour les enregistrer et naviguer instantanément. Notes d’accès, indices de réservation et idées photo aident à préparer des levers de soleil parfaits.</p>
-            <p class="guide-links"><a href="top-scenic-campsites-nz.html">Voir le top 25<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="where-to-camp-in-new-zealand.html">Vue d’ensemble régionale<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../top-scenic-campsites-nz.html">Voir le top 25<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../where-to-camp-in-new-zealand.html">Vue d’ensemble régionale<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Itinéraire camper de deux semaines en Nouvelle-Zélande</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Suivez un itinéraire de 14 jours équilibrant refuges du DOC, zones de freedom camping et holiday parks sur les deux îles. Carburant, ferry, courses, GPX et plans quotidiens imprimables rendent la personnalisation facile.</p>
-            <p class="guide-links"><a href="two-week-camper-itinerary-nz.html">Charger le plan 14 jours<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-costs-nz.html">Budgétiser le voyage<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../two-week-camper-itinerary-nz.html">Charger le plan 14 jours<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../camping-costs-nz.html">Budgétiser le voyage<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Coûts du camping en NZ, budget détaillé avec exemples</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Construisez des budgets réalistes pour solos, couples ou familles selon la saison. Nous incluons mix d’hébergements, carburant, ferries, alimentation et amortissement du matériel pour ajuster les chiffres rapidement.</p>
-            <p class="guide-links"><a href="camping-costs-nz.html">Planifier votre budget<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="holiday-parks-nz-booking-guide.html">Économiser sur les réservations<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../camping-costs-nz.html">Planifier votre budget<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../holiday-parks-nz-booking-guide.html">Économiser sur les réservations<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
         </div>
       </section>
