--- a/it/index.html
+++ b/it/index.html
@@ -469,91 +469,91 @@
             <h3>Le migliori app di campeggio per la Nuova Zelanda nel 2025</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Abbiamo messo KiwiCamping a confronto con Rankers, CamperMate, WikiCamps e AllTrails per vedere quale app funziona davvero sulle strade neozelandesi. Scopri per chi è adatta ogni opzione, come si comportano i dati offline e dove compaiono insidie di prezzo o privacy.</p>
-            <p class="guide-links"><a href="best-nz-camping-apps.html">Leggi la guida completa<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="holiday-parks-nz-booking-guide.html">Strategie di prenotazione<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../best-nz-camping-apps.html">Leggi la guida completa<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../holiday-parks-nz-booking-guide.html">Strategie di prenotazione<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Freedom camping in Nuova Zelanda, regole per regione</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Ottieni un riepilogo chiaro della legge nazionale e di ogni regolamento comunale prima di fermarti. La guida mostra come leggere la segnaletica, verificare le regole offline e scaricare schede rapide per entrambe le isole.</p>
-            <p class="guide-links"><a href="freedom-camping-rules-nz.html">Regole per regione<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="self-contained-vehicles-nz.html">Requisiti self-contained<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../freedom-camping-rules-nz.html">Regole per regione<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../self-contained-vehicles-nz.html">Requisiti self-contained<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Si può campeggiare gratis in NZ? Dove è legale e sicuro</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Scopri dove il campeggio è davvero gratuito, dalle riserve comunali ai campi base DOC, senza rischiare multe. Passiamo in rassegna etichetta, sicurezza e controlli legali così arrivi preparato e ben accolto.</p>
-            <p class="guide-links"><a href="free-camping-nz-legal.html">Flusso legale del campeggio gratuito<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="dump-stations-nz.html">Mappa stazioni di scarico<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../free-camping-nz-legal.html">Flusso legale del campeggio gratuito<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../dump-stations-nz.html">Mappa stazioni di scarico<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Dove campeggiare in Nuova Zelanda, guida alle località</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Scegli tra terreni DOC, riserve comunali, holiday park privati e soggiorni gestiti dagli iwi con punti forti regionali per ogni isola. Consigli stagionali e note di accesso aiutano a far combaciare destinazione, equipaggio e veicolo.</p>
-            <p class="guide-links"><a href="where-to-camp-in-new-zealand.html">Esplora la guida alle località<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="top-scenic-campsites-nz.html">Vedi la lista panoramica<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../where-to-camp-in-new-zealand.html">Esplora la guida alle località<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../top-scenic-campsites-nz.html">Vedi la lista panoramica<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Holiday park in Nuova Zelanda, come scegliere e prenotare</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Confronta servizi, fasce di prezzo e flussi di prenotazione per assicurare un posto con o senza energia in pochi minuti. Analizziamo vantaggi fedeltà, politiche di cancellazione e trucchi di late check-in con checklist stampabili.</p>
-            <p class="guide-links"><a href="holiday-parks-nz-booking-guide.html">Prenotare un holiday park<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-costs-nz.html">Calcolare il budget<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../holiday-parks-nz-booking-guide.html">Prenotare un holiday park<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../camping-costs-nz.html">Calcolare il budget<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Campeggi e rifugi DOC, prenotazioni, tariffe, etichetta</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Comprendi ogni categoria DOC, le tariffe associate e quando aprono le finestre di prenotazione. Promemoria di etichetta, avvisi e confronti affiancati ti preparano sia a campeggi serviti sia a bivacchi.</p>
-            <p class="guide-links"><a href="doc-campsites-huts-guide.html">Guida DOC completa<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="two-week-camper-itinerary-nz.html">Pianificare un itinerario DOC<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../doc-campsites-huts-guide.html">Guida DOC completa<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../two-week-camper-itinerary-nz.html">Pianificare un itinerario DOC<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Veicoli self-contained in NZ, cosa serve davvero</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Decifra i requisiti aggiornati dello standard NZS 5465 per toilette fisse, serbatoi, ventilazioni e documenti di ispezione prima di presentarti a un audit. Spieghiamo l’applicazione reale e includiamo checklist stampabili per restare in regola.</p>
-            <p class="guide-links"><a href="self-contained-vehicles-nz.html">Checklist di certificazione<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="freedom-camping-rules-nz.html">Regole del freedom camping<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../self-contained-vehicles-nz.html">Checklist di certificazione<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../freedom-camping-rules-nz.html">Regole del freedom camping<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Stazioni di scarico ed etichetta dei rifiuti per camperisti</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Mappa ogni stazione di scarico del Paese con suggerimenti di attrezzatura e routine di risciacquo che mantengono le aree pulite. Saprai evitare multe, gestire i detergenti responsabilmente e aiutare i comuni a mantenere i servizi aperti.</p>
-            <p class="guide-links"><a href="dump-stations-nz.html">Guida ai rifiuti<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="self-contained-vehicles-nz.html">Consigli self-contained<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../dump-stations-nz.html">Guida ai rifiuti<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../self-contained-vehicles-nz.html">Consigli self-contained<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Regole sul fuoco, divieti e cucina outdoor sicura</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Anticipa le stagioni con restrizioni o divieti di fuoco grazie a note regionali e link ai permessi. Tabelle decisionali e alternative di cottura assicurano la cena anche senza fiamma libera.</p>
-            <p class="guide-links"><a href="campfire-rules-nz.html">Verificare le regole sul fuoco<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-packing-list-nz.html#stoves">Aggiungere opzioni di cottura<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../campfire-rules-nz.html">Verificare le regole sul fuoco<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-packing-list-nz.html#stoves">Aggiungere opzioni di cottura<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Sandfly, meteo e stagioni: viaggio confortevole</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Pianifica con le fasce climatiche, i venti e le zone di sandfly della Nuova Zelanda, con informazioni mese per mese. Consigli di equipaggiamento e strategie mantengono la squadra comoda senza esagerare con i bagagli.</p>
-            <p class="guide-links"><a href="nz-camping-seasons-weather-sandflies.html">Guida alla pianificazione stagionale<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-packing-list-nz.html">Lista di equipaggiamento<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../nz-camping-seasons-weather-sandflies.html">Guida alla pianificazione stagionale<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../camping-packing-list-nz.html">Lista di equipaggiamento<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Lista essenziale per campeggiare in NZ</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Crea un piano di bagaglio pratico con gli essenziali più extra alpini, costieri e per clima umido. Checklist stampabili e consigli su comunicazione ed emergenze velocizzano la preparazione di gruppo.</p>
-            <p class="guide-links"><a href="camping-packing-list-nz.html">Scarica la checklist<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="nz-camping-seasons-weather-sandflies.html">Adatta al meteo<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../camping-packing-list-nz.html">Scarica la checklist<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../nz-camping-seasons-weather-sandflies.html">Adatta al meteo<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Campeggio responsabile in NZ, Leave No Trace locale</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Scopri come i principi Leave No Trace si applicano ai paesaggi, alla fauna e alle comunità di Aotearoa. Il guidebook copre le basi di biosicurezza e offre un codice di condotta condivisibile per mantenere i residenti dalla tua parte.</p>
-            <p class="guide-links"><a href="responsible-camping-nz.html">Leggere il codice di condotta<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="dump-stations-nz.html">Etichetta dei rifiuti<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../responsible-camping-nz.html">Leggere il codice di condotta<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../dump-stations-nz.html">Etichetta dei rifiuti<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Top 25 campeggi panoramici in Nuova Zelanda</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Scopri 25 campeggi da cartolina con deep link KiwiCamping per salvarli e navigare subito. Note di accesso, suggerimenti di prenotazione e idee foto aiutano a pianificare albe perfette.</p>
-            <p class="guide-links"><a href="top-scenic-campsites-nz.html">Guarda i Top 25<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="where-to-camp-in-new-zealand.html">Panoramica regionale<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../top-scenic-campsites-nz.html">Guarda i Top 25<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../where-to-camp-in-new-zealand.html">Panoramica regionale<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Itinerario camper di due settimane in Nuova Zelanda</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Segui un itinerario di 14 giorni che bilancia rifugi DOC, aree di freedom camping e holiday park su entrambe le isole. Carburante, traghetto, spesa, GPX e piani giornalieri stampabili rendono facile personalizzare.</p>
-            <p class="guide-links"><a href="two-week-camper-itinerary-nz.html">Carica il piano da 14 giorni<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-costs-nz.html">Budget del viaggio<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../two-week-camper-itinerary-nz.html">Carica il piano da 14 giorni<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../camping-costs-nz.html">Budget del viaggio<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Costi del campeggio in NZ, budget con esempi reali</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Costruisci budget realistici per avventure in solitaria, in coppia o in famiglia a seconda della stagione. Consideriamo mix di alloggi, carburante, traghetti, cibo e ammortamento dell’attrezzatura per farti aggiustare i numeri rapidamente.</p>
-            <p class="guide-links"><a href="camping-costs-nz.html">Pianificare il budget<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="holiday-parks-nz-booking-guide.html">Risparmiare sulle prenotazioni<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../camping-costs-nz.html">Pianificare il budget<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../holiday-parks-nz-booking-guide.html">Risparmiare sulle prenotazioni<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
         </div>
       </section>
