--- a/nl/index.html
+++ b/nl/index.html
@@ -469,91 +469,91 @@
             <h3>Beste camping-apps voor Nieuw-Zeeland in 2025</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">We testten KiwiCamping tegen Rankers, CamperMate, WikiCamps en AllTrails om te zien welke app echt standhoudt op Nieuw-Zeelandse wegen. Ontdek voor wie elke optie werkt, hoe offline data presteert en waar prijs- of privacyvalkuilen zitten.</p>
-            <p class="guide-links"><a href="best-nz-camping-apps.html">Lees de volledige gids<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="holiday-parks-nz-booking-guide.html">Boekingstrucs<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../best-nz-camping-apps.html">Lees de volledige gids<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../holiday-parks-nz-booking-guide.html">Boekingstrucs<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Freedom camping in Nieuw-Zeeland, regels per regio</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Krijg een heldere uitleg van de nationale wet en elke gemeentelijke verordening voordat je parkeert. De gids laat zien hoe je borden leest, regels offline controleert en quick reference-kaarten voor beide eilanden downloadt.</p>
-            <p class="guide-links"><a href="freedom-camping-rules-nz.html">Regels per regio<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="self-contained-vehicles-nz.html">Self-contained-eisen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../freedom-camping-rules-nz.html">Regels per regio<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../self-contained-vehicles-nz.html">Self-contained-eisen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Gratis kamperen in NZ? Waar het legaal en veilig is</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Zie precies waar kamperen echt gratis is, van gemeentelijke reservaten tot DOC-basisplekken, zonder risico op boetes. We behandelen etiquette, veiligheid en juridische checks zodat je met zekerheid aankomt.</p>
-            <p class="guide-links"><a href="free-camping-nz-legal.html">Legale gratis campingflow<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="dump-stations-nz.html">Kaart met loospunten<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../free-camping-nz-legal.html">Legale gratis campingflow<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../dump-stations-nz.html">Kaart met loospunten<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Waar je kunt kamperen in Nieuw-Zeeland, locatiewijzer</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Kies tussen DOC-gebieden, gemeentelijke reservaten, private holiday parks en iwi-locaties met regionale hoogtepunten per eiland. Seizoensadvies en toegangstips helpen bestemming, groep en voertuig op elkaar af te stemmen.</p>
-            <p class="guide-links"><a href="where-to-camp-in-new-zealand.html">Locaties verkennen<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="top-scenic-campsites-nz.html">Bekijk de panoramalijst<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../where-to-camp-in-new-zealand.html">Locaties verkennen<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../top-scenic-campsites-nz.html">Bekijk de panoramalijst<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Holiday parks in Nieuw-Zeeland, kiezen en boeken</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Vergelijk voorzieningen, prijsbanden en boekingsflows om binnen minuten een plek met of zonder stroom te regelen. We leggen loyaliteitsvoordelen, annuleringsregels en late check-in hacks uit met printbare checklists.</p>
-            <p class="guide-links"><a href="holiday-parks-nz-booking-guide.html">Holiday park boeken<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-costs-nz.html">Budget berekenen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../holiday-parks-nz-booking-guide.html">Holiday park boeken<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../camping-costs-nz.html">Budget berekenen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>DOC-campings en hutten, reserveringen, tarieven, etiquette</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Begrijp elke DOC-categorie, de bijbehorende kosten en wanneer reserveringsvensters openen. Etiquettetips, waarschuwingen en vergelijkingen naast elkaar bereiden je voor op zowel serviced campings als bivaks.</p>
-            <p class="guide-links"><a href="doc-campsites-huts-guide.html">Volledige DOC-gids<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="two-week-camper-itinerary-nz.html">DOC-rijk schema plannen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../doc-campsites-huts-guide.html">Volledige DOC-gids<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../two-week-camper-itinerary-nz.html">DOC-rijk schema plannen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Self-contained voertuigen in NZ, wat echt nodig is</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Ontcijfer de vernieuwde NZS 5465-vereisten voor vaste toiletten, tanks, ventilatie en inspectiedocumenten voordat je een keurmeester ziet. We leggen uit hoe het in de praktijk werkt en voegen printbare checklists toe om je voertuig compliant te houden.</p>
-            <p class="guide-links"><a href="self-contained-vehicles-nz.html">Checklist certificering<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="freedom-camping-rules-nz.html">Freedom-campingregels<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../self-contained-vehicles-nz.html">Checklist certificering<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../freedom-camping-rules-nz.html">Freedom-campingregels<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Loospunten en afvaletiquette voor kampeerders</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Breng alle loospunten van het land in kaart met uitrustingtips en spoelroutines die plekken brandschoon houden. Zo voorkom je boetes, ga je verantwoord om met reinigers en help je gemeenten de voorzieningen open te houden.</p>
-            <p class="guide-links"><a href="dump-stations-nz.html">Afvalgids<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="self-contained-vehicles-nz.html">Self-contained tips<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../dump-stations-nz.html">Afvalgids<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../self-contained-vehicles-nz.html">Self-contained tips<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Vuurregels, verboden en veilig buiten koken</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Wees voorbereid op periodes met vuurbeperkingen of -verboden via regionale notities en permitlinks. Beslisdiagrammen en kookalternatieven zorgen dat het avondeten doorgaat, ook zonder open vuur.</p>
-            <p class="guide-links"><a href="campfire-rules-nz.html">Vuurregels checken<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-packing-list-nz.html#stoves">Kookopties toevoegen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../campfire-rules-nz.html">Vuurregels checken<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-packing-list-nz.html#stoves">Kookopties toevoegen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Sandflies, weer en seizoenen: comfortabel plannen</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Plan rond de veranderende weerzones, winden en sandfly-gebieden van Nieuw-Zeeland met info per maand. Uitrustingsadvies en copingstrategieën houden de crew comfortabel zonder overbodige bagage.</p>
-            <p class="guide-links"><a href="nz-camping-seasons-weather-sandflies.html">Seizoensplanning<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-packing-list-nz.html">Paklijst bekijken<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../nz-camping-seasons-weather-sandflies.html">Seizoensplanning<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../camping-packing-list-nz.html">Paklijst bekijken<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Essentiële paklijst voor kamperen in NZ</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Werk een praktische pakplanning uit met basisitems plus alpine, kust- en nat-weervarianten voor NZ-trips. Printbare lijsten en communicatie- en noodgevallen tips versnellen de groepsvoorbereiding.</p>
-            <p class="guide-links"><a href="camping-packing-list-nz.html">Checklist downloaden<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="nz-camping-seasons-weather-sandflies.html">Afstemmen op het weer<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../camping-packing-list-nz.html">Checklist downloaden<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../nz-camping-seasons-weather-sandflies.html">Afstemmen op het weer<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Verantwoord kamperen in NZ, Leave No Trace lokaal</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Zie hoe Leave No Trace-principes zich vertalen naar de landschappen, fauna en communities van Aotearoa. De gids behandelt biosecuritybasics en biedt een deelbare gedragscode om locals te vriend te houden.</p>
-            <p class="guide-links"><a href="responsible-camping-nz.html">Gedragscode lezen<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="dump-stations-nz.html">Afvaletiquette<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../responsible-camping-nz.html">Gedragscode lezen<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../dump-stations-nz.html">Afvaletiquette<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Top 25 schilderachtige campings in Nieuw-Zeeland</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Ontdek 25 ansichtkaartwaardige campings met KiwiCamping deeplinks om ze direct op te slaan en te navigeren. Toegangstips, boekingssignalen en foto-ideeën helpen bij perfecte zonsopgangen.</p>
-            <p class="guide-links"><a href="top-scenic-campsites-nz.html">Bekijk de top 25<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="where-to-camp-in-new-zealand.html">Regionaal overzicht<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../top-scenic-campsites-nz.html">Bekijk de top 25<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../where-to-camp-in-new-zealand.html">Regionaal overzicht<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Twee weken camperroute door Nieuw-Zeeland</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Volg een 14-daags schema met een mix van DOC-hutten, freedom camping-plekken en holiday parks op beide eilanden. Brandstof, ferry, boodschappen, GPX en printbare dagplannen maken aanpassen eenvoudig.</p>
-            <p class="guide-links"><a href="two-week-camper-itinerary-nz.html">14-daags plan laden<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-costs-nz.html">Reis budgetteren<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../two-week-camper-itinerary-nz.html">14-daags plan laden<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../camping-costs-nz.html">Reis budgetteren<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Kampeerkosten in NZ, budgetoverzicht met voorbeelden</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Stel realistische budgetten op voor solo-, koppel- of gezinsavonturen per seizoen. We nemen mix van accommodaties, brandstof, ferry’s, eten en afschrijving van gear mee zodat je snel kunt bijsturen.</p>
-            <p class="guide-links"><a href="camping-costs-nz.html">Budget plannen<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="holiday-parks-nz-booking-guide.html">Besparen op boekingen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../camping-costs-nz.html">Budget plannen<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../holiday-parks-nz-booking-guide.html">Besparen op boekingen<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
         </div>
       </section>
