--- a/pt/index.html
+++ b/pt/index.html
@@ -469,91 +469,91 @@
             <h3>Melhores apps de camping na Nova Zelândia em 2025</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Testámos o KiwiCamping contra Rankers, CamperMate, WikiCamps e AllTrails para ver qual app aguenta mesmo nas estradas neozelandesas. Saiba para quem serve cada opção, como os dados offline se comportam e onde surgem armadilhas de preço ou privacidade.</p>
-            <p class="guide-links"><a href="best-nz-camping-apps.html">Ler o guia completo<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="holiday-parks-nz-booking-guide.html">Táticas de reserva<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../best-nz-camping-apps.html">Ler o guia completo<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../holiday-parks-nz-booking-guide.html">Táticas de reserva<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Freedom camping na Nova Zelândia, regras por região</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Obtenha um resumo claro da lei nacional e de cada regulamento municipal antes de estacionar. O guia mostra como ler a sinalização, verificar regras offline e descarregar resumos rápidos para as duas ilhas.</p>
-            <p class="guide-links"><a href="freedom-camping-rules-nz.html">Regras por região<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="self-contained-vehicles-nz.html">Requisitos self-contained<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../freedom-camping-rules-nz.html">Regras por região<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../self-contained-vehicles-nz.html">Requisitos self-contained<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Dá para acampar de graça na NZ? Onde é legal e seguro</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Veja onde o camping é genuinamente gratuito, desde reservas municipais a básicos DOC, sem arriscar multas. Revemos etiqueta, segurança e verificações legais para chegar seguro e bem recebido.</p>
-            <p class="guide-links"><a href="free-camping-nz-legal.html">Fluxo legal do camping gratuito<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="dump-stations-nz.html">Mapa de estações de despejo<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../free-camping-nz-legal.html">Fluxo legal do camping gratuito<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../dump-stations-nz.html">Mapa de estações de despejo<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Onde pode acampar na Nova Zelândia, guia completo</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Escolha entre terrenos DOC, reservas municipais, holiday parks privados e estadias geridas por iwi com destaques regionais para cada ilha. Conselhos sazonais e notas de acesso ajudam a alinhar destino, equipa e veículo.</p>
-            <p class="guide-links"><a href="where-to-camp-in-new-zealand.html">Explorar o guia de locais<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="top-scenic-campsites-nz.html">Ver lista cénica<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../where-to-camp-in-new-zealand.html">Explorar o guia de locais<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../top-scenic-campsites-nz.html">Ver lista cénica<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Holiday parks na Nova Zelândia, como escolher e reservar</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Compare comodidades, faixas de preço e fluxos de reserva para garantir um lugar com ou sem energia em minutos. Explicamos benefícios de fidelização, regras de cancelamento e truques de chegada tardia com checklists imprimíveis.</p>
-            <p class="guide-links"><a href="holiday-parks-nz-booking-guide.html">Reservar um holiday park<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-costs-nz.html">Calcular orçamento<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../holiday-parks-nz-booking-guide.html">Reservar um holiday park<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../camping-costs-nz.html">Calcular orçamento<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Parques e abrigos DOC, reservas, taxas e etiqueta</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Entenda cada categoria de parque e abrigo DOC, as taxas associadas e quando abrem as janelas de reserva. Lembretes de etiqueta, alertas e comparações lado a lado preparam-no para parques equipados ou bivacs.</p>
-            <p class="guide-links"><a href="doc-campsites-huts-guide.html">Guia DOC completo<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="two-week-camper-itinerary-nz.html">Planear itinerário com DOC<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../doc-campsites-huts-guide.html">Guia DOC completo<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../two-week-camper-itinerary-nz.html">Planear itinerário com DOC<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Veículos self-contained na NZ, o que é realmente exigido</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Descodifique os requisitos atualizados da norma NZS 5465 para sanitas fixas, depósitos, ventilação e papéis de inspeção antes de enfrentar um auditor. Explicamos como funciona na prática e incluímos checklists para manter o veículo em conformidade.</p>
-            <p class="guide-links"><a href="self-contained-vehicles-nz.html">Checklist de certificação<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="freedom-camping-rules-nz.html">Regras de freedom camping<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../self-contained-vehicles-nz.html">Checklist de certificação<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../freedom-camping-rules-nz.html">Regras de freedom camping<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Estações de despejo e etiqueta de resíduos para campistas</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Mapeie todas as estações de despejo do país com sugestões de equipamento e rotinas de enxaguamento que mantêm as áreas impecáveis. Saberá evitar multas, usar detergentes de forma responsável e ajudar os municípios a manter os serviços abertos.</p>
-            <p class="guide-links"><a href="dump-stations-nz.html">Guia de resíduos<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="self-contained-vehicles-nz.html">Dicas self-contained<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../dump-stations-nz.html">Guia de resíduos<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../self-contained-vehicles-nz.html">Dicas self-contained<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Regras de fogo, proibições e cozinha ao ar livre segura</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Antecipe-se às épocas de restrição ou proibição de fogo com notas regionais e links de licenças. Quadros de decisão e alternativas de cozinha garantem o jantar mesmo sem chama aberta.</p>
-            <p class="guide-links"><a href="campfire-rules-nz.html">Ver regras de fogo<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-packing-list-nz.html#stoves">Adicionar opções de cozinha<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../campfire-rules-nz.html">Ver regras de fogo<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-packing-list-nz.html#stoves">Adicionar opções de cozinha<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Sandflies, clima e estações: planear viagem confortável</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Planeie de acordo com as bandas meteorológicas, ventos e zonas de sandflies da Nova Zelândia com informação mês a mês. Conselhos de equipamento e estratégias mantêm a equipa confortável sem excesso de bagagem.</p>
-            <p class="guide-links"><a href="nz-camping-seasons-weather-sandflies.html">Guia de planeamento sazonal<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-packing-list-nz.html">Lista de bagagem<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../nz-camping-seasons-weather-sandflies.html">Guia de planeamento sazonal<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../camping-packing-list-nz.html">Lista de bagagem<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Lista essencial de bagagem para acampar na NZ</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Monte um plano de bagagem prático com essenciais e extras alpinos, costeiros e de clima húmido para viagens na NZ. Listas imprimíveis e dicas de comunicação e emergência aceleram a preparação em grupo.</p>
-            <p class="guide-links"><a href="camping-packing-list-nz.html">Descarregar a lista<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="nz-camping-seasons-weather-sandflies.html">Ajustar ao clima<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../camping-packing-list-nz.html">Descarregar a lista<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../nz-camping-seasons-weather-sandflies.html">Ajustar ao clima<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Camping responsável na NZ, Leave No Trace local</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Veja como os princípios Leave No Trace se adaptam às paisagens, fauna e comunidades de Aotearoa. O guia cobre bases de biossegurança e traz um código de conduta partilhável para manter os locais do seu lado.</p>
-            <p class="guide-links"><a href="responsible-camping-nz.html">Ler o código de conduta<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="dump-stations-nz.html">Etiqueta de resíduos<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../responsible-camping-nz.html">Ler o código de conduta<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../dump-stations-nz.html">Etiqueta de resíduos<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Top 25 parques de campismo cénicos na Nova Zelândia</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Descubra 25 parques dignos de postal com deep links KiwiCamping para guardar e navegar de imediato. Notas de acesso, pistas de reserva e ideias de fotos ajudam a planear amanheceres perfeitos.</p>
-            <p class="guide-links"><a href="top-scenic-campsites-nz.html">Ver o top 25<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="where-to-camp-in-new-zealand.html">Resumo regional<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../top-scenic-campsites-nz.html">Ver o top 25<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../where-to-camp-in-new-zealand.html">Resumo regional<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Itinerário de duas semanas de camper na Nova Zelândia</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Siga um itinerário de 14 dias que equilibra abrigos DOC, zonas de freedom camping e holiday parks em ambas as ilhas. Combustível, ferry, compras, GPX e planos diários imprimíveis facilitam personalizar.</p>
-            <p class="guide-links"><a href="two-week-camper-itinerary-nz.html">Carregar plano de 14 dias<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-costs-nz.html">Orçamentar a viagem<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../two-week-camper-itinerary-nz.html">Carregar plano de 14 dias<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../camping-costs-nz.html">Orçamentar a viagem<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Custos de acampar na NZ, orçamento com exemplos reais</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Construa orçamentos realistas para aventuras a solo, a dois ou em família conforme a estação. Consideramos mistura de alojamentos, combustível, ferry, alimentação e amortização de equipamento para ajustar números rapidamente.</p>
-            <p class="guide-links"><a href="camping-costs-nz.html">Planear o orçamento<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="holiday-parks-nz-booking-guide.html">Poupar nas reservas<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../camping-costs-nz.html">Planear o orçamento<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../holiday-parks-nz-booking-guide.html">Poupar nas reservas<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
         </div>
       </section>
