--- a/es/index.html
+++ b/es/index.html
@@ -469,91 +469,91 @@
             <h3>Las mejores apps de camping para Nueva Zelanda en 2025</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Probamos KiwiCamping frente a Rankers, CamperMate, WikiCamps y AllTrails para ver qué app aguanta realmente en las carreteras neozelandesas. Descubre para quién sirve cada opción, cómo se comportan los datos sin conexión y qué problemas de precio o privacidad aparecen.</p>
-            <p class="guide-links"><a href="best-nz-camping-apps.html">Leer la guía completa<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="holiday-parks-nz-booking-guide.html">Tácticas de reserva<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../best-nz-camping-apps.html">Leer la guía completa<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../holiday-parks-nz-booking-guide.html">Tácticas de reserva<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Freedom camping en Nueva Zelanda, normas por región</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Obtén un desglose en lenguaje claro de la ley nacional junto a cada ordenanza municipal antes de estacionarte. La guía enseña a leer la señalética, comprobar normas sin conexión y descargar fichas rápidas para ambas islas.</p>
-            <p class="guide-links"><a href="freedom-camping-rules-nz.html">Normativa por región<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="self-contained-vehicles-nz.html">Requisitos self-contained<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../freedom-camping-rules-nz.html">Normativa por región<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../self-contained-vehicles-nz.html">Requisitos self-contained<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>¿Puedes acampar gratis en NZ? Dónde es legal y seguro</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Descubre dónde acampar es realmente gratis, desde reservas municipales hasta campamentos básicos del DOC, sin arriesgar multas. Repasamos etiqueta, seguridad y comprobaciones legales para que llegues con confianza.</p>
-            <p class="guide-links"><a href="free-camping-nz-legal.html">Flujo legal de camping gratis<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="dump-stations-nz.html">Mapa de estaciones de descarga<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../free-camping-nz-legal.html">Flujo legal de camping gratis<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../dump-stations-nz.html">Mapa de estaciones de descarga<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Dónde puedes acampar en Nueva Zelanda, guía completa</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Elige entre terrenos del DOC, reservas municipales, holiday parks privados y estadías gestionadas por iwi con destacados regionales para cada isla. Los consejos estacionales y las notas de acceso te ayudan a emparejar destino con tu grupo y vehículo.</p>
-            <p class="guide-links"><a href="where-to-camp-in-new-zealand.html">Explorar la guía de ubicaciones<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="top-scenic-campsites-nz.html">Ver la lista escénica<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../where-to-camp-in-new-zealand.html">Explorar la guía de ubicaciones<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../top-scenic-campsites-nz.html">Ver la lista escénica<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Holiday parks en Nueva Zelanda, cómo elegir y reservar</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Compara servicios, rangos de precios y flujos de reserva para asegurar un sitio con o sin energía en minutos. Desglosamos beneficios de fidelidad, políticas de cancelación y trucos de llegada tardía con listas imprimibles.</p>
-            <p class="guide-links"><a href="holiday-parks-nz-booking-guide.html">Cómo reservar holiday parks<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-costs-nz.html">Calculadora de presupuesto<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../holiday-parks-nz-booking-guide.html">Cómo reservar holiday parks<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../camping-costs-nz.html">Calculadora de presupuesto<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Campamentos y refugios del DOC, reservas, tarifas y etiqueta</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Comprende cada categoría de campamento y refugio del DOC, las tarifas asociadas y cuándo abren las ventanas de reserva. Recordatorios de etiqueta, alertas y comparativas lado a lado te preparan para campamentos con servicios o bivouacs.</p>
-            <p class="guide-links"><a href="doc-campsites-huts-guide.html">Guía DOC completa<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="two-week-camper-itinerary-nz.html">Planificar itinerario con DOC<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../doc-campsites-huts-guide.html">Guía DOC completa<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../two-week-camper-itinerary-nz.html">Planificar itinerario con DOC<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Vehículos self-contained en NZ, lo que realmente se exige</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Descifra los requisitos actualizados de la norma NZS 5465 para baños fijos, depósitos, ventilaciones y papeles de inspección antes de presentarte ante un auditor. Explicamos la aplicación real y sumamos listas imprimibles para mantener tu vehículo al día.</p>
-            <p class="guide-links"><a href="self-contained-vehicles-nz.html">Checklist de certificación<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="freedom-camping-rules-nz.html">Reglas de freedom camping<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../self-contained-vehicles-nz.html">Checklist de certificación<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../freedom-camping-rules-nz.html">Reglas de freedom camping<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Estaciones de descarga y etiqueta de residuos para campistas</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Traza todas las estaciones de descarga del país con sugerencias de equipo y rutinas de enjuague que mantienen las plataformas impecables. Sabrás cómo evitar multas, manipular detergentes con responsabilidad y ayudar a que los concejos mantengan los servicios abiertos.</p>
-            <p class="guide-links"><a href="dump-stations-nz.html">Guía de residuos<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="self-contained-vehicles-nz.html">Consejos self-contained<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../dump-stations-nz.html">Guía de residuos<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../self-contained-vehicles-nz.html">Consejos self-contained<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Normas de fuego, prohibiciones y cocina segura al aire libre</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Anticípate a las temporadas de fuego restringido o prohibido con notas regionales y enlaces a permisos. Tablas de decisión y alternativas de cocina garantizan la cena incluso cuando no se permiten llamas abiertas.</p>
-            <p class="guide-links"><a href="campfire-rules-nz.html">Revisar reglas de fuego<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-packing-list-nz.html#stoves">Añadir opciones de cocina<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../campfire-rules-nz.html">Revisar reglas de fuego<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-packing-list-nz.html#stoves">Añadir opciones de cocina<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Sandflies, clima y estaciones: planifica un viaje cómodo</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Planifica según las bandas de clima, vientos y zonas de sandflies cambiantes de Nueva Zelanda con información mes a mes. Consejos de equipo y tácticas de manejo mantienen cómoda a la tripulación sin sobrecargar el equipaje.</p>
-            <p class="guide-links"><a href="nz-camping-seasons-weather-sandflies.html">Guía de planificación estacional<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-packing-list-nz.html">Lista de equipaje<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../nz-camping-seasons-weather-sandflies.html">Guía de planificación estacional<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../camping-packing-list-nz.html">Lista de equipaje<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Lista esencial de equipaje para acampar en NZ</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Trabaja un plan de equipaje práctico que cubre esenciales más extras alpinos, costeros y de clima húmedo para viajes en NZ. Listas imprimibles y consejos de comunicación y emergencia agilizan la preparación en grupo.</p>
-            <p class="guide-links"><a href="camping-packing-list-nz.html">Descargar la lista<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="nz-camping-seasons-weather-sandflies.html">Ajustar al clima<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../camping-packing-list-nz.html">Descargar la lista<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../nz-camping-seasons-weather-sandflies.html">Ajustar al clima<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Camping responsable en NZ, Leave No Trace adaptado</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Descubre cómo los principios Leave No Trace se adaptan a los paisajes, fauna y comunidades de Aotearoa. La guía repasa bases de bioseguridad y ofrece un código de conducta compartible para mantener contentos a los locales.</p>
-            <p class="guide-links"><a href="responsible-camping-nz.html">Leer el código de conducta<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="dump-stations-nz.html">Etiqueta de residuos<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../responsible-camping-nz.html">Leer el código de conducta<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../dump-stations-nz.html">Etiqueta de residuos<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Top 25 campamentos panorámicos en Nueva Zelanda</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Descubre 25 campamentos de postal con enlaces directos en KiwiCamping para guardarlos y navegar al instante. Notas de acceso, pistas de reserva e ideas para fotos te ayudan a planear amaneceres perfectos.</p>
-            <p class="guide-links"><a href="top-scenic-campsites-nz.html">Ver los 25 mejores<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="where-to-camp-in-new-zealand.html">Resumen regional<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../top-scenic-campsites-nz.html">Ver los 25 mejores<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../where-to-camp-in-new-zealand.html">Resumen regional<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Itinerario camper de dos semanas por Nueva Zelanda</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Sigue un itinerario de 14 días que equilibra refugios del DOC, zonas de freedom camping y holiday parks en ambas islas. Combustible, ferry, compras, GPX y planes diarios imprimibles facilitan personalizarlo.</p>
-            <p class="guide-links"><a href="two-week-camper-itinerary-nz.html">Cargar el plan de 14 días<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-costs-nz.html">Presupuestar el viaje<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../two-week-camper-itinerary-nz.html">Cargar el plan de 14 días<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../camping-costs-nz.html">Presupuestar el viaje<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
           <article class="guide-preview">
             <h3>Costes de acampar en NZ, desglose de presupuesto real</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Construye presupuestos realistas para aventuras en solitario, pareja o familia según la estación. Consideramos mezcla de alojamientos, combustible, ferries, comida y amortización del equipo para que ajustes números rápido.</p>
-            <p class="guide-links"><a href="camping-costs-nz.html">Planear tu presupuesto<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="holiday-parks-nz-booking-guide.html">Ahorrar en reservas<span class="link-arrow" aria-hidden="true">↗</span></a></p>
+            <p class="guide-links"><a href="../camping-costs-nz.html">Planear tu presupuesto<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="../holiday-parks-nz-booking-guide.html">Ahorrar en reservas<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
         </div>
       </section>
